--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ aside span {
 
   body {
     grid-template-columns: 1fr;
-    grid-template-rows: 0.2fr 0.8fr;
+    grid-template-rows: 1fr;
     grid-template-areas:
       "profile"
       "timeline";
